--- a/web/index.html
+++ b/web/index.html
@@ -9,12 +9,12 @@
     <title>AudioLogsTools</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
-    <script defer src="main.dart.js"></script>
+    <script defer src="main.dart.js" ></script>
 </head>
 
 <body>
 
-  <div id="output"></div>
+  <div id="output">test</div>
 
 </body>
 </html>
